update: overlay height to prevent content shift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -665,7 +665,7 @@ footer i {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: #2F7336;
   background: linear-gradient(to right,
       #2F7336, #AA3A38);
